Fixed styleguide spacing, made new css to space it

--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,7 @@ body {
   background-color: #FEFFF6;
 }
 
-.styleguide {
-left:100px;
-}
+
 
 .element {
   margin-top: 2rem;
